bugfix on scrollbar

--- a/src/index.css
+++ b/src/index.css
@@ -371,11 +371,11 @@ ul {
 }
 
 .scrollbar {
+  transform: translateY(-100%);
   position: absolute;
   left: 0;
   top: 0;
   height: 100vh;
   background: var(--highlight);
   width: 8px;
-  transition: max-height 0.6s ease-out;
 }
